Fix spacing on top and bottom of blog detail

--- a/src/Components/Blog/Detail/index.css
+++ b/src/Components/Blog/Detail/index.css
@@ -1,5 +1,6 @@
 #BlogDetail {
-  padding-top: 4em;
+  padding-top: 6em;
+  margin-bottom: 5em;
 }
 
 #BlogDetail #title {
